--- a/webapp.html
+++ b/webapp.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mobile Application Development - Intellisys</title>
-  <link rel="stylesheet" href="CSS/webapp.css" />
+  <link rel="stylesheet" href="webapp.css" />
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
@@ -24,7 +24,7 @@
   <nav>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/logo1.gif" alt="Intellisys Logo" width="150" />
+        <img src="logo1.gif" alt="Intellisys Logo" width="150" />
       </a>
     </div>
 
@@ -105,7 +105,7 @@
       </h2>
 
       <div class="process-image" data-aos="zoom-in" data-aos-delay="200">
-        <img src="Images/website.png" alt="Web Development Process" style="width: 30%; height: auto" />
+        <img src="website.png" alt="Web Development Process" style="width: 30%; height: auto" />
       </div>
     </div>
   </section>
@@ -121,7 +121,7 @@
       </p>
 
       <div class="benefits-image" data-aos="zoom-in">
-        <img src="Images/webdesign-img1.png" alt="Web Development Benefits" />
+        <img src="webdesign-img1.png" alt="Web Development Benefits" />
       </div>
 
       <div class="benefits-content">
@@ -201,7 +201,7 @@
       <!-- Left Section - Logo & Address -->
       <div class="footer-column">
         <div class="footer-logo">
-          <img src="Images/intellisys (2).png" alt="Company Logo" />
+          <img src="intellisys (2).png" alt="Company Logo" />
         </div>
         <h3 class="footer-title">Address</h3>
         <p>
