--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intellisys IT Solutions Private Limited</title>
-    <link rel="stylesheet" href="CSS/About.css">
+    <link rel="stylesheet" href="About.css">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="Images/logo1.gif" alt="Intellisys Logo" width="150" />
+                <img src="logo1.gif" alt="Intellisys Logo" width="150" />
             </a>
         </div>
 
@@ -70,7 +70,7 @@
             <div class="content-wrapper">
                 <div class="image-container">
                     <div class="border-frame"></div>
-                    <img src="Images/ABgirl.jpg" alt="Smiling Man with Laptop">
+                    <img src="ABgirl.jpg" alt="Smiling Man with Laptop">
                 </div>
                 <div class="text-content">
 
@@ -140,7 +140,7 @@
                 <p class="text-lg text-black mb-8">We follow a structured approach to ensure seamless project execution
                     and delivery.</p>
                 <div class="flex justify-center">
-                    <img src="Images/projectprocess.png" alt="Project Delivery Process Diagram"
+                    <img src="projectprocess.png" alt="Project Delivery Process Diagram"
                         class="w-2/3 project-process-img" />
                 </div>
             </div>
@@ -163,46 +163,46 @@
             <div class="slider">
                 <div class="slide-track">
                     <!-- Original Logos -->
-                    <div class="slide"><img src="Images/vidyank.png" alt="Client 2"></div>
-                    <div class="slide"><img src="Images/defenceguru.png" alt="Client 3"></div>
-                    <div class="slide"><img src="Images/c1.png" alt="Client 4"></div>
-                    <div class="slide"><img src="Images/c2.png" alt="Client 5"></div>
-                    <div class="slide"><img src="Images/c3.jpg" alt="Client 6"></div>
-                    <div class="slide"><img src="Images/c4.png" alt="Client 7"></div>
-                    <div class="slide"><img src="Images/c5.png" alt="Client 8"></div>
-                    <div class="slide"><img src="Images/c6.png" alt="Client 9"></div>
-                    <div class="slide"><img src="Images/c7.png" alt="Client 10"></div>
-                    <div class="slide"><img src="Images/c8.png" alt="Client 11"></div>
-                    <div class="slide"><img src="Images/c9.png" alt="Client 12"></div>
-                    <div class="slide"><img src="Images/c10.png" alt="Client 13"></div>
+                    <div class="slide"><img src="vidyank.png" alt="Client 2"></div>
+                    <div class="slide"><img src="defenceguru.png" alt="Client 3"></div>
+                    <div class="slide"><img src="c1.png" alt="Client 4"></div>
+                    <div class="slide"><img src="c2.png" alt="Client 5"></div>
+                    <div class="slide"><img src="c3.jpg" alt="Client 6"></div>
+                    <div class="slide"><img src="c4.png" alt="Client 7"></div>
+                    <div class="slide"><img src="c5.png" alt="Client 8"></div>
+                    <div class="slide"><img src="c6.png" alt="Client 9"></div>
+                    <div class="slide"><img src="c7.png" alt="Client 10"></div>
+                    <div class="slide"><img src="c8.png" alt="Client 11"></div>
+                    <div class="slide"><img src="c9.png" alt="Client 12"></div>
+                    <div class="slide"><img src="c10.png" alt="Client 13"></div>
 
                     <!-- Duplicate Logos for Seamless Loop -->
-                    <div class="slide"><img src="Images/vidyank.png" alt="Client 2"></div>
-                    <div class="slide"><img src="Images/defenceguru.png" alt="Client 3"></div>
-                    <div class="slide"><img src="Images/c1.png" alt="Client 4"></div>
-                    <div class="slide"><img src="Images/c2.png" alt="Client 5"></div>
-                    <div class="slide"><img src="Images/c3.jpg" alt="Client 6"></div>
-                    <div class="slide"><img src="Images/c4.png" alt="Client 7"></div>
-                    <div class="slide"><img src="Images/c5.png" alt="Client 8"></div>
-                    <div class="slide"><img src="Images/c6.png" alt="Client 9"></div>
-                    <div class="slide"><img src="Images/c7.png" alt="Client 10"></div>
-                    <div class="slide"><img src="Images/c8.png" alt="Client 11"></div>
-                    <div class="slide"><img src="Images/c9.png" alt="Client 12"></div>
-                    <div class="slide"><img src="Images/c10.png" alt="Client 13"></div>
+                    <div class="slide"><img src="vidyank.png" alt="Client 2"></div>
+                    <div class="slide"><img src="defenceguru.png" alt="Client 3"></div>
+                    <div class="slide"><img src="c1.png" alt="Client 4"></div>
+                    <div class="slide"><img src="c2.png" alt="Client 5"></div>
+                    <div class="slide"><img src="c3.jpg" alt="Client 6"></div>
+                    <div class="slide"><img src="c4.png" alt="Client 7"></div>
+                    <div class="slide"><img src="c5.png" alt="Client 8"></div>
+                    <div class="slide"><img src="c6.png" alt="Client 9"></div>
+                    <div class="slide"><img src="c7.png" alt="Client 10"></div>
+                    <div class="slide"><img src="c8.png" alt="Client 11"></div>
+                    <div class="slide"><img src="c9.png" alt="Client 12"></div>
+                    <div class="slide"><img src="c10.png" alt="Client 13"></div>
 
 
-                    <div class="slide"><img src="Images/vidyank.png" alt="Client 2"></div>
-                    <div class="slide"><img src="Images/defenceguru.png" alt="Client 3"></div>
-                    <div class="slide"><img src="Images/c1.png" alt="Client 4"></div>
-                    <div class="slide"><img src="Images/c2.png" alt="Client 5"></div>
-                    <div class="slide"><img src="Images/c3.jpg" alt="Client 6"></div>
-                    <div class="slide"><img src="Images/c4.png" alt="Client 7"></div>
-                    <div class="slide"><img src="Images/c5.png" alt="Client 8"></div>
-                    <div class="slide"><img src="Images/c6.png" alt="Client 9"></div>
-                    <div class="slide"><img src="Images/c7.png" alt="Client 10"></div>
-                    <div class="slide"><img src="Images/c8.png" alt="Client 11"></div>
-                    <div class="slide"><img src="Images/c9.png" alt="Client 12"></div>
-                    <div class="slide"><img src="Images/c10.png" alt="Client 13"></div>
+                    <div class="slide"><img src="vidyank.png" alt="Client 2"></div>
+                    <div class="slide"><img src="defenceguru.png" alt="Client 3"></div>
+                    <div class="slide"><img src="c1.png" alt="Client 4"></div>
+                    <div class="slide"><img src="c2.png" alt="Client 5"></div>
+                    <div class="slide"><img src="c3.jpg" alt="Client 6"></div>
+                    <div class="slide"><img src="c4.png" alt="Client 7"></div>
+                    <div class="slide"><img src="c5.png" alt="Client 8"></div>
+                    <div class="slide"><img src="c6.png" alt="Client 9"></div>
+                    <div class="slide"><img src="c7.png" alt="Client 10"></div>
+                    <div class="slide"><img src="c8.png" alt="Client 11"></div>
+                    <div class="slide"><img src="c9.png" alt="Client 12"></div>
+                    <div class="slide"><img src="c10.png" alt="Client 13"></div>
                 </div>
             </div>
         </section>
@@ -258,7 +258,7 @@
             <!-- Left Section - Logo & Address -->
             <div class="footer-column">
                 <div class="footer-logo">
-                    <img src="Images/intellisys (2).png" alt="Company Logo">
+                    <img src="intellisys (2).png" alt="Company Logo">
                 </div>
                 <h3 class="footer-title">Address</h3>
                 <p>Gera Imperim Rise, 328-B, Wipro Circle,<br>
